overflow fix try

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 html {
   scrollbar-width: thin;
   scrollbar-color: var(--color-blue) #eaf4ff;
+  overflow-x: hidden;
 }
 
 body {
