--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,6 +5,7 @@
 html {
 	scrollbar-width: thin;
 	scrollbar-color: var(--color-blue) #eaf4ff;
+	overflow-x: hidden;
 }
 
 body {
